--- a/ConnectFour/ConnectFour.csproj
+++ b/ConnectFour/ConnectFour.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ConnectFour</RootNamespace>
     <AssemblyName>ConnectFour</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -40,6 +41,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -49,6 +51,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Icons\orbz_water.ico</ApplicationIcon>
@@ -57,6 +60,9 @@
     <Reference Include="DynamicDataDisplay, Version=0.3.0.0, Culture=neutral, PublicKeyToken=5b7d744a7263923f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Library\DynamicDataDisplay.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -78,6 +84,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Data\DataParser.cs" />
+    <Compile Include="Game\Board.cs" />
+    <Compile Include="Game\ConnectFourBoard.cs" />
+    <Compile Include="Game\GoBoard.cs" />
     <Compile Include="KnnBot.cs" />
     <Compile Include="Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
@@ -107,7 +116,6 @@
     </Compile>
     <Compile Include="Bot.cs" />
     <Compile Include="NeuralNetBot.cs" />
-    <Compile Include="Board.cs" />
     <Compile Include="GameViewer.xaml.cs">
       <DependentUpon>GameViewer.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -140,6 +148,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -147,6 +156,18 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Visual Studio 2019\Projects\Go\GoSharpBase\GoSharpBase.csproj">
+      <Project>{070868aa-6c88-496c-a800-849998ed4405}</Project>
+      <Name>GoSharpBase</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Visual Studio 2019\Projects\Go\Go\GoSharp.csproj">
+      <Project>{122984f9-6f07-40f0-a76f-2d9db818ebb4}</Project>
+      <Name>GoSharp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Visual Studio 2019\Projects\Go\ScenarioCollection\ScenarioCollection.csproj">
+      <Project>{899f0dc7-bb58-4f0f-ac5d-d914b0aec74b}</Project>
+      <Name>ScenarioCollection</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GlassExtension\GlassExtension.csproj">
       <Project>{A65D1618-73DA-4536-9086-B0F6FF81CE05}</Project>
       <Name>GlassExtension</Name>
