--- a/ConsoleGo/ConsoleGo.csproj
+++ b/ConsoleGo/ConsoleGo.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectFour.cs" />
+    <Compile Include="Go.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
